# autoPACK

./: README.md  autoPACK_filePaths.json  autoPACK_filePaths.xml  autopack_recipe.json  autopack_recipe.xml  helloLudo.xml
autopack/: AFGui.py  Analysis.py  Compartment.py  Environment.py  GeometryTools.py  Graphics.py  Grid.py  Gui.py  HistoVol.py  IOutils.py  Ingredient.py  InsidePointsPseudoCode1.py  Organelle.py  Recipe.py  Serializable.py  __init__.py  applyRBtraj.py  autofill_viewer.py  autopack_serverDeveloper_recipeList.json  bd_box.py  binvox_rw.py  fluorescence.py  hexagonTile.py  ingr_ui.py  intersect_RayTriangle.py  ldSequence.py  lipids.py  pandautil.py  pingDevelopBranch1.rft  randomRot.py  ray.py  recipe_available.json  recipe_available.xml  runTraj.py  setLink.txt  setupPanda.py  shapeGenerator.py  tem_sim.py  trajectory.py  transformation.py
autopack/Patches/: mayaHelper.py
autopack/autoFillRecipeScripts/2DcylinderSphereFill/: Test_CylindersSpheres2D1.0.xml
autopack/autoFillRecipeScripts/2DsphereFill/: 2DSpheresGradients_setup_recipe.py  2DSpheres_setup_recipe.py  Test_Spheres2D1.0.xml  Test_Spheres2D1.2.xml  Test_Spheres2Dgradients1.0.xml
autopack/plugin/: __init__.py  autoPackpmvCommands.py
autopack/plugin/upy_autoPack/: AFG_plugin.pyp  autoPack.pyp  plugin_autopack_max.py  uAFG_plugin.py  upy_autoPack_plugin.py
autopack/scripts/: analyze_A1.py  analyze_B1.py  analyze_B2.py  analyze_C1.py  animPacking.py  blood_bd.py  c4d_ObjectParticuleGroup_tag.py  c4d_perIngredientParticuleGroup_tag.py  cellpack_analyze_script.py  cleanLipidCollide.py  convertRecipeToJson.py  correctMoldb.py  distribution_analyze.py  export_recipe_bd_box.py  export_recipe_collada.py  export_recipe_maxwell.py  export_recipe_mitsuba.py  export_recipe_pdb.py  fix_center_center.py  haltonFill.py  hiv_bd.py  hiv_fluo_analyze.py  hiv_fluo_exp.py  hiv_immature.py  hiv_lipids.py  jsonserializedbinary.py  measure_distances.py  meshCollada.py  multiPack.py  octree.py  octree_exteneded.py  octree_test_1.py  oneIngredient.py  parseProteomics.py  run_autoPACK.py  run_autoPACK_myco.py  run_mycoplasma.py  sblSphereTree.py  serialize_from_results.py  tem_sim_test.py  (+16 more)
cAutoPACK/: CMakeLists.txt  CellScape1.0.xml  Cylinder.xml  IngradientsFactory.h  Sphere.h  Types.h  XMLLoader.h  autopack.cpp  compile_Example  compile_autopack  generateCmake.bat  hw.cc  multiSpheres.xml  oleg.cc
cAutoPACK/old_src/: hw.cc  oleg.cc
cAutoPACK/recipes/: BloodSerum1.1.xml  CellScape1.0.xml  Ingradient1.blend  Spheres2D.xml  multiSpheres.xml
cAutoPACK/src/: BigGrid.cpp  BigGrid.h  CommonIncludes.h  GeometricTools.cpp  GeometricTools.h  Ingradient.cpp  Ingradient.h  IngradientsFactory.cpp  IngradientsFactory.h  Ingredient.cpp  Ingredient.h  IngredientsDispatcher.cpp  IngredientsDispatcher.h  IngredientsFactory.cpp  IngredientsFactory.h  ParticeList.h  Sphere.cpp  Sphere.h  Types.h  XMLLoader.cpp  XMLLoader.h  autopack.cpp
cAutoPACK/test/: PrioritiesTests.cpp  test.cpp
data/: message  recipe_available.xml
data/2DcylinderSphereFill/geoms/: cylinder.dae  cylinder.fbx
data/2DcylinderSphereFill/results/: CylSpherefillResult.afr  (+5 more)
data/PartnersTest/: PartnersTest1.0.xml
data/planeWave/: planeWave.dae  planeWave1.0.xml
dataRight/: recipe_available.xml
dataRight/2DCylindersSpheres/: 2DCylindersSpheres_setup_recipe1.1.py
dataRight/geomsRightMultimers/: Surf_Nef.dae  iSUTM.dae  monomer3PGK.stl
doc/: api-objects.txt  autopack-module.html  autopack-pysrc.html  autopack.Analysis-module.html  autopack.Analysis-pysrc.html  autopack.Analysis.AnalyseAP-class.html  autopack.Compartment-module.html  autopack.Compartment-pysrc.html  autopack.Compartment.Compartment-class.html  autopack.Compartment.CompartmentList-class.html  autopack.Environment-module.html  autopack.Environment-pysrc.html  autopack.Environment.Environment-class.html  autopack.Environment.Gradient-class.html  autopack.Environment.Grid-class.html  autopack.Graphics-module.html  autopack.Graphics-pysrc.html  autopack.Graphics.AutopackViewer-class.html  autopack.Grid-module.html  autopack.Grid-pysrc.html  autopack.Grid.Grid-class.html  autopack.Grid.HaltonGrid-class.html  autopack.Gui-module.html  autopack.Gui-pysrc.html  autopack.Gui.AutoPackGui-class.html  autopack.Gui.SubdialogCustomFiller-class.html  autopack.Gui.SubdialogFiller-class.html  autopack.Gui.SubdialogGradient-class.html  autopack.Gui.SubdialogIngrdient-class.html  autopack.Gui.SubdialogIngredientViewer-class.html  autopack.Gui.SubdialogViewer-class.html  autopack.IOutils-module.html  autopack.IOutils-pysrc.html  autopack.IOutils.GrabResult-class.html  autopack.Ingredient-module.html  autopack.Ingredient-pysrc.html  autopack.Ingredient.ActinIngrediant-class.html  autopack.Ingredient.Agent-class.html  autopack.Ingredient.GrowIngrediant-class.html  autopack.Ingredient.IOingredientTool-class.html  (+49 more)
(+2038 files in other folders)
